--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -4,8 +4,8 @@ x-airflow-common: &airflow-common
     context: ..
     dockerfile: docker/Dockerfile
   environment: &airflow-common-env
-    AIRFLOW__CORE__EXECUTOR: SequentialExecutor
-    AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: sqlite:////opt/airflow/airflow.db
+    AIRFLOW__CORE__EXECUTOR: LocalExecutor
+    AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
     AIRFLOW__CORE__FERNET_KEY: ${AIRFLOW__CORE__FERNET_KEY}
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
@@ -20,8 +20,10 @@ x-airflow-common: &airflow-common
     - ../plugins:/opt/airflow/plugins
     - ../logs:/opt/airflow/logs
     - ../data:/opt/airflow/data
-    - airflow-db:/opt/airflow
   user: "${AIRFLOW_UID:-50000}:0"
+  depends_on:
+    postgres:
+      condition: service_healthy
   logging:
     driver: "json-file"
     options:
@@ -29,6 +31,21 @@ x-airflow-common: &airflow-common
       max-file: "3"
 
 services:
+  postgres:
+    image: postgres:13
+    environment:
+      POSTGRES_USER: airflow
+      POSTGRES_PASSWORD: airflow
+      POSTGRES_DB: airflow
+    volumes:
+      - postgres-db:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "airflow"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: always
+
   airflow-init:
     <<: *airflow-common
     entrypoint: /bin/bash
@@ -48,6 +65,9 @@ services:
       _AIRFLOW_DB_UPGRADE: 'true'
       _AIRFLOW_WWW_USER_CREATE: 'true'
     restart: "no"
+    depends_on:
+      postgres:
+        condition: service_healthy
 
   airflow-webserver:
     <<: *airflow-common
@@ -64,10 +84,6 @@ services:
     depends_on:
       airflow-init:
         condition: service_completed_successfully
-    deploy:
-      resources:
-        limits:
-          memory: 512M
 
   airflow-scheduler:
     <<: *airflow-common
@@ -82,10 +98,6 @@ services:
     depends_on:
       airflow-init:
         condition: service_completed_successfully
-    deploy:
-      resources:
-        limits:
-          memory: 512M
 
 volumes:
-  airflow-db:
+  postgres-db:
